# bonus

./: .env  Dockerfile  app.py  extensions.py  forms.py  loginform.py  models.py  pyproject.toml  requirements.txt  routes.py  utils.py
static/: style.css
templates/: base.html  index.html  register.html  register_camera.html  register_form.html  settings.html
templates/errors/: 404.html  500.html
