[tool.poetry]
name = "repl-nix-bonusmanager360"
version = "0.1.0"
description = "Add your description here"
authors = ["Your Name <youremail@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
face_recognition = "*"
opencv-python = "*"
dlib = "*"
flask = "^2.2.5"
psycopg2-binary = "^2.9.10"
pillow = "^9.5.0"
flask-login = "^0.6.2"
flask-wtf = "^1.1.1"
wtforms = "^2.3.3"
flask-sqlalchemy = "^3.0.3"
sqlalchemy = "^2.0.16"
flask-admin = "^1.6.1"
werkzeug = "^2.2.3"
mysql-connector-python = "^9.1.0"
pymysql = "^1.1.1"
flask-sse = "^1.0.0"
redis = "^5.2.0"
flask-bootstrap = "^3.3.7.1"

[tool.poetry.dev-dependencies]
pytest = "^6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
